--- a/component/tab/styles.css
+++ b/component/tab/styles.css
@@ -485,6 +485,21 @@ section.mydiv10 ul li img {
      
     margin-bottom: 0px;
   }
+
+  section.mydiv10 ul li {
+    width: calc(100%/2 - 20px);
+    display: flex;
+    justify-items: center;
+    justify-content: center;
+}
+
+section.mydiv10 ul li img {
+    display: block;
+}
+
+section.mydiv10 ul {
+    gap: 25px;
+}
   }
 
 
