--- a/component/tab/styles.css
+++ b/component/tab/styles.css
@@ -36,10 +36,11 @@
 
 .mydiv {
     /* background-image: url(../image/2.png); */
-    background-image: url(../../public/image/2.png);
+    background-image: url(../../public/image/2a.png);
     padding: 200px;
     background-position: center;
     background-repeat: no-repeat;
+    background-size: cover;
 }
 section.mydiv h1 {
     text-align: center;
