--- a/scss/demo/demo.module.scss
+++ b/scss/demo/demo.module.scss
@@ -1,6 +1,6 @@
-.bannerImage{
+.bannerImage {
   position: relative;
-  .absolutePart{
+  .absolutePart {
     position: absolute;
     top: 43%;
     left: 7%;
@@ -8,20 +8,19 @@
 }
 
 .bannerImage {
-
   .bannertext {
     position: relative;
-    h1{
-      position: relative ;
+    h1 {
+      position: relative;
       margin: 0;
       padding: 0;
-      font-size: 43px ;
+      font-size: 43px;
     }
-    p{
+    p {
       position: relative;
       padding: 0;
       font-weight: 400;
-    font-size: 18px !important;
+      font-size: 18px !important;
     }
   }
 }
@@ -115,7 +114,7 @@ h2.sectionheading {
     top: -30px;
     right: -55px;
   }
-  h3{
+  h3 {
     font-size: 48px;
     font-weight: 100;
   }
@@ -195,7 +194,7 @@ section.deliversection h3 {
 }
 
 .deliversection {
-  background: #EBEBEB !important;
+  background: #ebebeb !important;
 }
 .box551 {
   width: 100px;
@@ -231,7 +230,7 @@ section.deliversection h3 {
   padding-top: 40px;
   ul {
     display: flex;
-    justify-content: space-between; 
+    justify-content: space-between;
     align-items: center;
     li {
       img {
@@ -249,7 +248,6 @@ section.deliversection h3 {
   }
 }
 .sectionf {
-
   .arrowlist {
     img {
       margin-top: 0px;
@@ -261,29 +259,26 @@ section.deliversection h3 {
   }
 }
 
-@media (max-width:600px) {
+@media (max-width: 600px) {
   section.deliversection ul {
     flex-wrap: wrap;
   }
-  .mobileH1{
+  .mobileH1 {
     font-size: 25px !important;
   }
-  .bannerImage{
-    img{
+  .bannerImage {
+    img {
       height: 380px !important;
     }
-   
   }
-  
-  .mobileRes{
-        max-width: 100% !important;
-     
+
+  .mobileRes {
+    max-width: 100% !important;
   }
   .box551 {
-margin: 0 auto;
-
+    margin: 0 auto;
   }
-  .faqQuestion{
+  .faqQuestion {
     font-size: 18px;
     font-weight: 600;
   }
@@ -296,9 +291,9 @@ margin: 0 auto;
       font-weight: 700;
       position: relative;
       top: -16px;
-    right: 0px;
-    padding-bottom: 0px !important;
-    margin-bottom: 0;
+      right: 0px;
+      padding-bottom: 0px !important;
+      margin-bottom: 0;
     }
   }
   .box551 + h2 {
@@ -310,93 +305,43 @@ margin: 0 auto;
 
   .mydiv001 {
     /* background-image: url(./image/1.png); */
-    
+
     padding: 200px 0px;
-    
+
     padding-left: 0;
-}
-img.hireimages1 {
-  width: 100%;
-  position: relative;
-  left: 0px;
-}
-
-.mydiv77 {
-  
-  padding-bottom: 30px;
-   
-  margin-left: 0px;
-}
-.mydiv88 {
-   
-  padding-bottom: 30px;
-   
-  margin-left: 0px;
-  margin-top: 0px;
-  padding-top: 36px;
-}
-.hirecontent1 {
-  margin-left: 0px;
-}
-section.mydiv88 h1, section.mydiv77 h1 {
-  
-  font-size: 6vw;
-   
-  margin-bottom: 0px;
-}
-
-.sectiont {
-  padding-top: 100px;
-  padding-bottom: 100px;
-
-  &:after {
-    content: "";
-    width: 34%;
-    height: 100%;
-    background-color: #7b45d9;
-    opacity: 1;
   }
-  .imageouter {
+  img.hireimages1 {
+    width: 100%;
     position: relative;
-    &:after {
-      content: "";
-
-      width: 66%;
-      height: 80%;
-      border: 2px solid #ffffff;
-      position: absolute;
-      opacity: 1;
-      left: 146px;
-      top: 70px;
-    }
-    
+    left: 0px;
   }
-  &:before {
-    position: absolute;
-    background-color: #7b45d9;
-    width: 80%;
-    height: 100%;
+
+  .mydiv77 {
+    padding-bottom: 30px;
+
+    margin-left: 0px;
   }
-  
+  .mydiv88 {
+    padding-bottom: 30px;
 
-  
-}
-
-.faqcontent {
-  h1 {
-    color: #f65517;
-    font-size: 21px;
+    margin-left: 0px;
+    margin-top: 0px;
+    padding-top: 36px;
   }
-}
+  .hirecontent1 {
+    margin-left: 0px;
+  }
+  section.mydiv88 h1,
+  section.mydiv77 h1 {
+    font-size: 6vw;
 
-}
-
-@media (max-width:600px) {
+    margin-bottom: 0px;
+  }
 
   .sectiont {
     padding-top: 100px;
     padding-bottom: 100px;
-  
+
     &:after {
       content: "";
       width: 34%;
@@ -408,16 +353,15 @@ section.mydiv88 h1, section.mydiv77 h1 {
       position: relative;
       &:after {
         content: "";
-  
+
         width: 66%;
         height: 80%;
         border: 2px solid #ffffff;
         position: absolute;
         opacity: 1;
-        left: 65px;
-    top: 70px;
+        left: 146px;
+        top: 70px;
       }
-      
     }
     &:before {
       position: absolute;
@@ -425,10 +369,50 @@ section.mydiv88 h1, section.mydiv77 h1 {
       width: 80%;
       height: 100%;
     }
-    
-  
-    
+  }
+
+  .faqcontent {
+    h1 {
+      color: #f65517;
+      font-size: 21px;
+    }
   }
 }
 
+.span_box {
+  padding: 0px 42px;
+}
+@media (max-width: 600px) {
+  .sectiont {
+    padding-top: 100px;
+    padding-bottom: 100px;
 
+    &:after {
+      content: "";
+      width: 34%;
+      height: 100%;
+      background-color: #7b45d9;
+      opacity: 1;
+    }
+    .imageouter {
+      position: relative;
+      &:after {
+        content: "";
+
+        width: 66%;
+        height: 80%;
+        border: 2px solid #ffffff;
+        position: absolute;
+        opacity: 1;
+        left: 65px;
+        top: 70px;
+      }
+    }
+    &:before {
+      position: absolute;
+      background-color: #7b45d9;
+      width: 80%;
+      height: 100%;
+    }
+  }
+}
