--- a/scss/demo/demo.module.scss
+++ b/scss/demo/demo.module.scss
@@ -63,7 +63,16 @@
     h1 {
       position: relative;
       padding-top: 110px;
-      color: #ff0000;
+      background-image: linear-gradient(
+        to right,
+        #e62222,
+        #e62222,
+        #ef6d35,
+        #ef6d35,
+        #ef6d35
+      );
+      -webkit-background-clip: text;
+      -webkit-text-fill-color: transparent;
       font-family: sans-serif;
       font-size: 45px;
       font-weight: 100;
@@ -100,12 +109,30 @@ ul.arrowlist {
 h2.sectionheading {
   font-size: 36px;
   font-weight: 100;
-  color: #db239b;
+  background-image: linear-gradient(
+    to right,
+    #e62222,
+    #e62222,
+    #ef6d35,
+    #ef6d35,
+    #ef6d35
+  );
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
 }
 
 .sectionFive {
   h2 {
-    color: #ff0000;
+    background-image: linear-gradient(
+      to right,
+      #e62222,
+      #e62222,
+      #ef6d35,
+      #ef6d35,
+      #ef6d35
+    );
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
     margin-top: 0;
     padding-top: 0;
     font-size: 3.2em;
@@ -129,7 +156,16 @@ h2.sectionheading {
     padding: 19px;
     height: 100%;
     h4 {
-      color: #be6016;
+      background-image: linear-gradient(
+        to right,
+        #e62222,
+        #e62222,
+        #ef6d35,
+        #ef6d35,
+        #ef6d35
+      );
+      -webkit-background-clip: text;
+      -webkit-text-fill-color: transparent;
       margin: 0;
       padding: 0;
       margin-bottom: 23px;
@@ -243,7 +279,16 @@ section.deliversection h3 {
 }
 .faqcontent {
   h1 {
-    color: #f65517;
+    background-image: linear-gradient(
+      to right,
+      #e62222,
+      #e62222,
+      #ef6d35,
+      #ef6d35,
+      #ef6d35
+    );
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
     font-size: 28px;
   }
 }
@@ -284,7 +329,16 @@ section.deliversection h3 {
   }
   .sectionFive {
     h2 {
-      color: #ff0000;
+      background-image: linear-gradient(
+        to right,
+        #e62222,
+        #e62222,
+        #ef6d35,
+        #ef6d35,
+        #ef6d35
+      );
+      -webkit-background-clip: text;
+      -webkit-text-fill-color: transparent;
       margin-top: 0;
       padding-top: 0;
       font-size: 3.2em;
@@ -373,7 +427,16 @@ section.deliversection h3 {
 
   .faqcontent {
     h1 {
-      color: #f65517;
+      background-image: linear-gradient(
+        to right,
+        #e62222,
+        #e62222,
+        #ef6d35,
+        #ef6d35,
+        #ef6d35
+      );
+      -webkit-background-clip: text;
+      -webkit-text-fill-color: transparent;
       font-size: 21px;
     }
   }
