--- a/scss/demo/aboutus.module.scss
+++ b/scss/demo/aboutus.module.scss
@@ -17,6 +17,31 @@
   color: black;
   font-weight: 700;
 }
+.progress {
+  display: -ms-flexbox;
+  display: flex;
+  height: 1rem;
+  overflow: hidden;
+  line-height: 0;
+  font-size: 0.75rem;
+  background-color: #e9ecef;
+  border-radius: 0.25rem;
+}
+
+.progressbar {
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-direction: column;
+  flex-direction: column;
+  -ms-flex-pack: center;
+  justify-content: center;
+  overflow: hidden;
+  color: #fff;
+  text-align: center;
+  white-space: nowrap;
+  background-color: #db239b !important;
+  transition: width 0.6s ease;
+}
 
 .heading3 {
   min-height: 55px;
@@ -25,10 +50,32 @@
   /* min-width: 52px; */
   width: 569px;
   line-height: 36px;
+  color: black;
+  padding-right: 10px;
+  font-size: 31px;
 }
+.heading33 {
+  min-height: 55px;
+  background-color: #f3c20f;
+  text-align: end;
+  /* min-width: 52px; */
+  width: 569px;
+  line-height: 36px;
+  font-size: 31px;
 
+  padding-right: 10px;
+}
 .about_heading {
-  color: #ff0000;
+  background-image: linear-gradient(
+    90deg,
+    #e62222,
+    #e62222,
+    #ef6d35,
+    #ef6d35,
+    #ef6d35
+  );
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
 
   font-weight: 700;
 
@@ -118,6 +165,7 @@
   align-items: center;
   justify-content: center;
   display: flex;
+  margin-left: 120px !important;
 }
 .box551 + h2 {
   position: relative;
@@ -149,4 +197,13 @@
 
 .back_box {
   background-color: white;
+}
+.tex_color {
+  color: black;
+}
+.section_heading3 {
+  color: black !important;
+  font-size: 35px;
+  /* text-align: center; */
+  padding: 19px 0px 0px 0px;
 }
