--- a/scss/demo/blog.module.scss
+++ b/scss/demo/blog.module.scss
@@ -24,7 +24,7 @@
 
 .img_thumbnail1 {
   border-radius: 50%;
-
+  object-fit: cover;
   z-index: 1;
 
   position: absolute;
@@ -48,8 +48,12 @@
     margin-top: 0;
     margin-bottom: 1rem;
     text-align: justify;
-    padding: 0px 14px;
+    padding: 0px 0px;
   }
+}
+
+.box333 {
+  margin-top: 2px;
 }
 
 .new_box {
@@ -73,7 +77,16 @@
 }
 
 .h1box {
-  color: #ff0802 !important;
+  background-image: linear-gradient(
+    90deg,
+    #e62222,
+    #e62222,
+    #ef6d35,
+    #ef6d35,
+    #ef6d35
+  );
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
 
   font-weight: 600;
 
@@ -119,7 +132,7 @@
   }
 }
 .heading_blog {
-  font-weight: 200;
+  font-weight: 100;
 }
 .image_flex {
   display: flex;
@@ -148,7 +161,7 @@
   /* justify-content: center; */
   align-items: center;
   grid-gap: 10px;
-  gap: 10px;
+  gap: 7px;
   margin-top: -8px;
   margin-left: 8px;
   line-height: 8px;
@@ -170,9 +183,9 @@
 
 .top_box3 {
   h1 {
-    font-size: 34px;
-
+    font-size: 32px;
     color: #7b45d9;
+    font-weight: 400;
   }
 }
 .apple_img {
@@ -194,7 +207,16 @@
 
 .newsection2 {
   h2 {
-    color: #ff0000;
+    background-image: linear-gradient(
+      90deg,
+      #e62222,
+      #e62222,
+      #ef6d35,
+      #ef6d35,
+      #ef6d35
+    );
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
     /* margin: 7px 0px; */
     font-size: 18px;
     font-weight: 500;
@@ -266,4 +288,7 @@
   p {
     padding: 0px;
   }
+}
+.social_icon {
+  margin-left: 5px;
 }
