--- a/component/tab/styles.css
+++ b/component/tab/styles.css
@@ -297,6 +297,8 @@ section.mydiv9 h1 {
 
 section.mydiv9 {
     background-color: #000;
+    margin-top: 44px;
+
 }
 section.mydiv10 {
     background-color: white;
