--- a/scss/demo/aboutus.module.scss
+++ b/scss/demo/aboutus.module.scss
@@ -20,12 +20,13 @@
 .progress {
   display: -ms-flexbox;
   display: flex;
-  height: 1rem;
-  overflow: hidden;
+  height: 5px;
+ 
   line-height: 0;
   font-size: 0.75rem;
   background-color: #e9ecef;
   border-radius: 0.25rem;
+  
 }
 
 .progressbar {
@@ -35,14 +36,32 @@
   flex-direction: column;
   -ms-flex-pack: center;
   justify-content: center;
-  overflow: hidden;
+  
   color: #fff;
   text-align: center;
   white-space: nowrap;
   background-color: #db239b !important;
   transition: width 0.6s ease;
+  width: 63%;
+  position: relative;
+  &:before {
+    content: "";
+    width: 10px;
+    height: 10px;
+    background-color: #db239b !important;
+    border-radius: 50%;
+    position: absolute;
+    right: -7px;
+  }
 }
 
+.paraprogress{
+
+ 
+color:white;
+    padding: 0px;
+  
+}
 .heading3 {
   min-height: 55px;
   background-color: #f3c20f;
@@ -166,6 +185,7 @@
   justify-content: center;
   display: flex;
   margin-left: 120px !important;
+  background: #707070;
 }
 .box551 + h2 {
   position: relative;
@@ -203,7 +223,44 @@
 }
 .section_heading3 {
   color: black !important;
-  font-size: 35px;
+  font-size: 30px;
   /* text-align: center; */
-  padding: 19px 0px 0px 0px;
+  padding: 11px 14px;
+}
+
+.section_flex{
+
+  display: flex;
+  justify-content: center;
+  gap: 20px;
+
+}
+
+.watch_button{    padding: 12px 35px;
+  display: inline-block;
+ 
+  font-size: 15px;
+  font-family: sans-serif !important;
+  font-weight: 500;
+  background: black;
+  color: white;
+  margin: -9px 17px;
+
+}
+
+.watch_button1{    padding: 12px 35px;
+  display: inline-block;
+ 
+  font-size: 15px;
+  font-family: sans-serif !important;
+  font-weight: 500;
+  background: black;
+  color: white;
+  margin: 10px 17px;
+
+}
+
+.div_sections{
+
+  margin-top: 50px;
 }
