--- a/styles/globals.css
+++ b/styles/globals.css
@@ -449,7 +449,7 @@ p.leader_leaderpara__2uIkn a {
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
-    height: 150vh;
+    height: 145vh;
     width: 100%;
     position: relative;
    
@@ -529,6 +529,10 @@ p.leader_leaderpara__2uIkn a {
     }
 .background_section{
     background-color: white;
+    width: 580px;
+    height: 255px;
+    margin-bottom: 35px;
+    border: 1px solid #707070;
 }
 
 
@@ -1123,11 +1127,11 @@ margin-top: 15px !important;
   }
   
   .div_boxslider  {
-    height: 250px;
+    height: 281px;
     background-color: white;
     color: black;
-    width: 340px;
-    padding: 5px 5px 5px 5px;
+    width: 356px;
+    padding: 19px 5px 5px 5px;
   }
  
   .newslider{
@@ -1135,10 +1139,50 @@ margin-top: 15px !important;
     padding: 0px;
     text-align: center;
     color:black;
+
+    font-size: 22px;
   } .newslider333{
 
     padding: 0px;
     text-align: center;
-    color:black;
-    margin-left: 151px;
+    color: #DB239B;
+    margin-left: 125px;
+    font-weight: 500;
   }
+
+  .amazingslider{
+
+    display: flex;
+    justify-content: space-around;
+    grid-gap: 100px;
+    gap: 1px;
+    
+ 
+  }
+
+  .slider_background{
+
+    background-image: url(/image/bk.jpg);
+
+    background-size: cover;
+    height: 80vh;
+    background-repeat: no-repeat;
+  }
+
+  .pcenter{
+
+    text-align: center;
+  }
+
+  .slidercontain{   background-image: url(/image/bk.jpg);
+    background-size: cover;
+    height: 84vh;
+    background-repeat: no-repeat;
+    margin-top: 41px;
+    padding: 66px 0px;} 
+
+    .what_box{
+
+        text-align: center;
+            font-size: 43px;
+            margin-bottom: 24px;}
