--- a/scss/demo/aboutus.module.scss
+++ b/scss/demo/aboutus.module.scss
@@ -1,3 +1,4 @@
+$mobile: 576px;
 .section1 {
   height: 490px;
   width: 570px;
@@ -263,4 +264,130 @@ color:white;
 .div_sections{
 
   margin-top: 50px;
+}
+@media (max-width: $mobile) {
+  .Imagestyle{
+    height: 200px;
+  }
+  
+.padding_section {
+  padding-top: 0px;
+
+  // padding-right: 66px;
+}
+.heading3 {
+  min-height: 55px;
+  background-color: #f3c20f;
+  text-align: end;
+  /* min-width: 52px; */
+  width: auto;
+  line-height: 36px;
+  color: black;
+  padding-right: 10px;
+  font-size: 31px;
+}
+.heading3 {
+  min-height: 55px;
+  background-color: #f3c20f;
+  text-align: end;
+  /* min-width: 52px; */
+  width: auto;
+  line-height: 36px;
+  color: black;
+  padding-right: 10px;
+  font-size: 31px;
+}
+.heading33{
+  min-height: 55px;
+  background-color: #f3c20f;
+  text-align: end;
+  /* min-width: 52px; */
+  width: auto;
+  line-height: 36px;
+  font-size: 31px;
+  padding-right: 10px;
+}
+
+.section1 {
+  height: 490px;
+  width: auto;
+  background-color: white;
+  color: black;
+  padding-top: 57px;
+}
+.apple_img{
+  width:100% !important;
+}
+.section_flex {
+  display: flex;
+  justify-content: center;
+  grid-gap: 20px;
+  gap: 20px;
+  flex-wrap: wrap;
+}
+.bannerImage{
+  position: relative;
+  
+  top: 51px;
+}
+.section21{
+  height: 41vh;
+}
+.content11{
+  position: absolute;
+    top: 44px !important;
+    left: 33px !important;
+    background: rgb(0, 0, 0);
+    background: rgba(0, 0, 0, 0.5);
+    color: #f1f1f1;
+    width: 84%;
+    padding: 4px -9px;
+    height: 277px !important;
+    text-align: justify;
+}
+.section_box {
+  padding-top: 4rem;
+  min-height: 66vh;
+  background: none; 
+}
+.watch_button1{  
+  padding: 12px 35px;
+  display: block;
+  margin: 0 auto !important;
+  text-align: center !important;
+
+}
+.watch_button{    padding: 12px 35px;
+  padding: 12px 35px;
+  display: block;
+  margin: 0 auto !important;
+  position: relative;
+  text-align: center !important;
+  top: -19px;
+ 
+
+}
+.section01{
+  height: 180vh;
+}
+.div10formob{
+  height: 53vh !important;
+}
+.background_sectionmob{
+  background-color: white;
+  // width: 580px;
+  height: 327px !important;
+  margin-bottom: 35px;
+  border: 1px solid #707070;
+  margin-left: 17px !important;
+  margin-right: 17px !important;
+}
+.mobileResslidercontain{
+  height: 62vh;
+
+    background-repeat: no-repeat;
+    margin-top: 41px;
+    padding: 0px 0px;
+}
+
 }
