--- a/scss/demo/blog.module.scss
+++ b/scss/demo/blog.module.scss
@@ -41,6 +41,7 @@
     font-weight: 100;
   }
 }
+
 .top_box {
   p {
     font-size: 22px;
@@ -77,14 +78,12 @@
 }
 
 .h1box {
-  background-image: linear-gradient(
-    90deg,
-    #e62222,
-    #e62222,
-    #ef6d35,
-    #ef6d35,
-    #ef6d35
-  );
+  background-image: linear-gradient(90deg,
+      #e62222,
+      #e62222,
+      #ef6d35,
+      #ef6d35,
+      #ef6d35);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
 
@@ -102,10 +101,12 @@
 
   height: 37vh;
 }
+
 .Featurebox {
   height: 87vh;
   background: #0a0a0a;
 }
+
 .new_box3 {
   background-color: black;
   color: white;
@@ -117,6 +118,7 @@
   padding: 0px 17px 19px 17px;
   top: -165px;
   left: 596px;
+
   h2 {
     font-size: 18px;
   }
@@ -126,14 +128,17 @@
   display: flex;
 
   justify-content: space-around;
+
   h4 {
     text-align: center;
     font-weight: 100;
   }
 }
+
 .heading_blog {
   font-weight: 100;
 }
+
 .image_flex {
   display: flex;
 
@@ -150,6 +155,7 @@
   margin-left: 8px;
 
   line-height: 8px;
+
   p {
     padding: 0px;
   }
@@ -188,6 +194,7 @@
     font-weight: 400;
   }
 }
+
 .apple_img {
   border-radius: 50%;
 }
@@ -207,14 +214,12 @@
 
 .newsection2 {
   h2 {
-    background-image: linear-gradient(
-      90deg,
-      #e62222,
-      #e62222,
-      #ef6d35,
-      #ef6d35,
-      #ef6d35
-    );
+    background-image: linear-gradient(90deg,
+        #e62222,
+        #e62222,
+        #ef6d35,
+        #ef6d35,
+        #ef6d35);
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
     /* margin: 7px 0px; */
@@ -229,6 +234,7 @@
 }
 
 .newsection2 {
+
   h1,
   h5,
   h6,
@@ -240,13 +246,16 @@
 .fontbox {
   font-size: 28px;
 }
+
 .fontbox3 {
+
   h6,
   h5 {
     padding: 0px;
     font-weight: 100;
   }
 }
+
 .row33 {
   display: flex;
 
@@ -256,8 +265,10 @@
 .purple_color {
   color: #7b45d9;
 }
+
 .bannerImage {
   position: relative;
+
   .absolutePart {
     position: absolute;
     top: 43%;
@@ -268,12 +279,14 @@
 .bannerImage {
   .bannertext {
     position: relative;
+
     h1 {
       position: relative;
       margin: 0;
       padding: 0;
       font-size: 43px;
     }
+
     p {
       position: relative;
       padding: 0;
@@ -284,11 +297,153 @@
 }
 
 .top_heading {
+
   h2,
   p {
     padding: 0px;
   }
 }
+
 .social_icon {
   margin-left: 5px;
+}
+
+.video_box3 {
+
+  width: 580px;
+  height: 480px;
+}
+
+
+
+@media (max-width: 600px) {
+  .Featurebox {
+    height: 92vh;
+    background: #0a0a0a;
+
+  }
+
+  .newsection1 {
+    background-color: #0a0a0a;
+    height: 45vh;
+  }
+
+  .new_box3 {
+
+
+    background-color: black;
+    color: white;
+    /* z-index: -1; */
+    position: relative;
+    height: 100%;
+    width: 100%;
+    border: 1px solid white;
+    padding: 0px 17px 19px 17px;
+    top: -113px;
+    left: 13px;
+
+  }
+
+  .img_thumbnail1 {
+    border-radius: 50%;
+    object-fit: cover;
+    z-index: 1;
+    position: absolute;
+    top: 0px;
+    left: 225px;
+    /* border-radius: 0px; */
+    height: 100%;
+    width: 57%;
+  }
+
+  .image_margin {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+  }
+
+  .btn_primary {
+    background-color: #7b45d9;
+    border-radius: 39px 41px;
+    height: 52px;
+    width: 100%;
+    margin-left: 83px;
+
+  }
+
+  .image_flex3 {
+    display: flex;
+    align-content: center;
+    justify-content: space-evenly;
+    /* grid-gap: 14px; */
+    grid-gap: -1px;
+    gap: 7px;
+    margin-top: -8px;
+    margin-left: 8px;
+    line-height: 5px;
+    flex-wrap: wrap;
+    font-size: 14px;
+  }
+
+  .new_box {
+    background-color: #212121;
+    color: white;
+    /* z-index: -1; */
+    position: relative;
+    height: 87%;
+    width: 80%;
+    border-radius: 0px 69px 43px 0px;
+  }
+
+  .top_box {
+    p {
+      font-size: 11px;
+      margin-top: 0;
+      margin-bottom: 1rem;
+      text-align: justify;
+      padding: 0px 0px;
+    }
+  }
+
+  .top_box {
+    h1 {
+      color: #7b45d9;
+      font-size: 17px;
+      font-weight: 100;
+      padding: 0px;
+      padding-top: 10px;
+    }
+
+    
+  }
+  .video_box3 {
+    width: 100% !important;
+    height: 480px !important;
+    margin: 4px !important;
+  }
+
+  .bannerImage{
+    img {
+    height: 380px !important;}
+}
+
+.top_box3{
+  p {
+  font-size: 14px;
+}}
+
+.h1box {
+  background-image: linear-gradient(90deg, #e62222, #e62222, #ef6d35, #ef6d35, #ef6d35);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  font-weight: 600;
+  font-size: 3rem;
+  padding: 0px 17px;
+}
+
+
+.mobileRes{
+  max-width: 100% !important;
+}
+
 }
