--- a/css/style.css
+++ b/css/style.css
@@ -126,7 +126,7 @@ h6 {
 p {
   margin-top: 0;
   margin-bottom: 1rem;
-  text-align: justify;
+  /* text-align: justify; */
   padding: 11px 15px;
 }
 
